# ossie

./: .asf.yaml  .gitignore  CONTRIBUTING.md  DISCLAIMER  NOTICE  README.md  ROADMAP.md
converters/: README.md  index.md
converters/dbt/: README.md  pyproject.toml
converters/dbt/src/osi_dbt/: cli.py
converters/dbt/src/ossie_dbt/: __init__.py  cli.py  converter_issues.py  expression_utils.py  filter_utils.py  msi_to_osi.py  osi_to_msi.py
converters/dbt/tests/: helpers.py  test_msi_to_osi.py  test_osi_to_msi.py
converters/dbt/tests/__snapshots__/: test_msi_to_osi.ambr  test_osi_to_msi.ambr
converters/gooddata/: README.md  pyproject.toml
converters/gooddata/src/ossie_gooddata/: __init__.py  gooddata_to_osi.py  models.py  osi_to_gooddata.py
converters/gooddata/tests/: conftest.py  test_gooddata_to_osi.py  test_models.py  test_osi_to_gooddata.py  test_roundtrip.py
converters/gooddata/tests/fixtures/: osi_tpcds.yaml
converters/honeydew/src/: honeydew_osi_converter.py
converters/honeydew/tests/: test_honeydew_osi_converter.py
converters/polaris/: README.md  pom.xml
converters/polaris/src/main/java/org/apache/ossie/converter/polaris/: OsiModelParser.java  OsiPolarisConverter.java  OsiYamlGenerator.java  PolarisClient.java  PolarisExporter.java  PolarisImporter.java
converters/polaris/src/test/java/org/apache/ossie/converter/polaris/: OsiPolarisConverterTest.java
converters/salesforce/: README.md  pom.xml
converters/salesforce/src/main/java/org/apache/ossie/app/: OsiSalesforceConverter.java
converters/salesforce/src/main/java/org/apache/ossie/converter/: AbstractConverter.java  ConversionDirection.java  Converter.java  ConverterConstants.java  ConverterFactory.java  ConverterImpl.java  CustomExtensionHandler.java  DatasetMappingHandler.java  FieldMappingHandler.java  GenericMappingEngine.java  MetricMappingHandler.java  RelationshipMappingHandler.java  SemanticModelMappingHandler.java
converters/salesforce/src/main/java/org/apache/ossie/converter/pipeline/: DirectionConfig.java  (+4 more)
converters/salesforce/src/main/java/org/apache/ossie/exception/: ConversionException.java  InvalidInputException.java  ValidationException.java
converters/salesforce/src/main/java/org/apache/ossie/mapper/: FileBasedPropertyMapper.java  PropertyMapper.java
converters/salesforce/src/main/java/org/apache/ossie/util/: DataStructureUtils.java  MappingUtils.java  PathUtils.java
converters/salesforce/src/main/java/org/apache/ossie/validator/: SchemaValidator.java
converters/salesforce/src/main/resources/: mappings.yaml  osi-salesforce-converter-config.yaml
converters/salesforce/src/test/java/org/apache/ossie/: OsiToSalesforceConverterTest.java  SalesforceToOsiConverterTest.java
converters/salesforce/src/test/resources/examples/: osiToSalesforce.yaml
converters/snowflake/: README.md  requirements.txt
converters/snowflake/src/: osi_to_snowflake_yaml_converter.py
converters/snowflake/tests/: example_converted_tpcds_semantic_model.yaml  test_osi_to_snowflake_yaml_converter.py
core-spec/: osi-schema.json  spec.md  spec.yaml
docs/: index.md  working_groups.md
examples/: flights.yaml  tpcds_semantic_model.yaml
ontology/: ontology.json  ontology.md
python/: pyproject.toml
python/src/ossie/: __init__.py  models.py
validation/: validate.py
(+1 files in other folders)
