# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "apache-ossie-gooddata"
version = "0.2.0.dev0"
description = "Bidirectional converter between GoodData LDM and Apache Ossie semantic model"
authors = [{name = "GoodData Corporation", email = "support@gooddata.com"}]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0.1",
]

[project.license]
text = "Apache-2.0"

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/ossie_gooddata/**/*"]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/ossie_gooddata"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
